syntax = "proto3";

package shop;

message ShopProduct {
    int32 id = 1;
    int32 shop_id = 2;
    int32 product_id = 3;
}

service ShopProductCRUDService {
    rpc AddShopProduct(AddShopProductRequest) returns (AddShopProductResponse);
    rpc GetShopProduct(GetShopProductRequest) returns (GetShopProductResponse);
    rpc UpdateShopProduct(UpdateShopProductRequest) returns (UpdateShopProductResponse);
    rpc DeleteShopProduct(DeleteShopProductRequest) returns (DeleteShopProductResponse);
  }

  
message AddShopProductRequest {
    int32 shop_id = 1;
    int32 product_id = 2;
}

message AddShopProductResponse {
    ShopProduct shop_product = 1;
}

message GetShopProductRequest {
    int32 id = 1;
}

message GetShopProductResponse {
    repeated ShopProduct shop_product = 1;
}

message UpdateShopProductRequest {
    int32 id = 1;
    int32 shop_id = 2;
    int32 product_id = 3;
}

message UpdateShopProductResponse {
    ShopProduct shop_product = 1;
}

message DeleteShopProductRequest {
    int32 id = 1;
}

message DeleteShopProductResponse {
    ShopProduct shop_product = 1;
}

